[package]
name = "sol_new"
version = "0.1.0"
edition = "2021"

[dependencies]
# ------------------------
# 异常处理与错误管理
# ------------------------

# 强大的错误处理库，提供灵活的错误类型和上下文信息
anyhow = "1.0.95"


# ------------------------
# 数据序列化与反序列化
# ------------------------

# 序列化和反序列化支持，常用于 JSON、YAML、Bincode 等格式
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"                                 # 处理 JSON 格式的序列化和反序列化
bincode = "1.3.3"                                      # 高效的二进制编码格式
borsh = "1.5.5"                                        # 专门用于高效序列化数据的二进制格式，常用于 Solana 生态
base64 = "0.22.1"

# ------------------------
# Solana 相关依赖
# ------------------------

# Solana 客户端，用于与 Solana 网络进行交互
solana-client = "2.1.13"
solana-program = "2.1.13"                         # Solana 程序 (智能合约) 开发支持
solana-sdk = "2.1.13"                             # Solana SDK 提供核心工具
solana-transaction-status = "2.1.13"              # 获取和解析交易状态信息
solana-transaction-status-client-types = "2.1.13" # Solana 交易状态客户端类型

# ------------------------
# Token 相关依赖
# ------------------------

# Solana 代币账户相关操作，提供代币账户的管理与处理
spl-associated-token-account = "6.0.0"

# Solana SPL Token 标准库，代币的创建、管理和交易
spl-token = "7.0.0"

# ------------------------
# 网络与异步编程
# ------------------------

# 异步编程工具，Solana 的很多操作需要异步处理
tokio = { version = "1.43.0", features = ["full"] }

# 处理异步流和任务的工具集，常与 `tokio` 配合使用
futures-util = "0.3.31"

# 网络请求
reqwest = { version = "0.12.12", features = ["json"] }

# ------------------------
# 日志与监控
# ------------------------

# 高度可定制的日志框架，支持多种日志级别和格式
tracing = "0.1.41"

# 用于 `tracing` 的日志收集器，支持集成到日志处理系统中
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ------------------------
# 环境变量管理
# ------------------------

# 读取 `.env` 文件中的环境变量
dotenv = "0.15.0"

# ------------------------
# 随机数生成
# ------------------------

# 随机数生成库，提供多种随机数生成策略
rand = "0.9.0"


# ------------------------
# gRPC 客户端
# ------------------------

# 用于与 Yellowstone gRPC 服务进行交互的客户端库
yellowstone-grpc-client = "5.0.0"

# gRPC 相关的 Proto 文件定义，用于数据结构的序列化和反序列化
yellowstone-grpc-proto = "5.0.0"

# ------------------------
# SDK 与开发工具
# ------------------------


redis = {version ="0.29.0", features=["tokio-comp","json","connection-manager","r2d2"] }
once_cell = "1.20.3"
r2d2 = "0.8.10"
dashmap = "6.1.0"
tokio-tungstenite = "0.26.2"
url = "2.5.4"
thiserror = "2.0.12" 
chrono = "0.4.40"
chrono-tz = "0.10.3"
 
